style.css
/* ... */
#projects .project-info{
    padding: 30px;
    flex-basis: 50%;
    height: 100%;
    
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-direction: column;
    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
    color: white;
    
}
#projects .project-info h1{
    font-size: 4rem;
    font-weight: 500;

}
#projects .project-info h2{
    font-size: 1.8rem;
    font-weight: 500;
    margin-top: 10px;
}
#projects .project-info p{
    color:white;
}
#projects .project-image{
    flex-basis: 50%;
    height: 300px;
    position: relative;
    overflow: hidden;
}
#projects .project-image:after{
    content: '';
    left: 0;
    top: 0;
    position: absolute;
    height: 100%;
    width: 100%;
    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%) ;
    opacity: .7;
}
#projects .project-image img{
    transition: .3s ease transform;
    
}
#projects .project-item:hover .project-image img{
    transform: scale(1.1);
}
/*about*/

#about .about{
    flex-direction: column-reverse;
    text-align: center;
    max-width: 1800px;
    padding: 100px 20px;
}
#about .column-left img{
    width: 250px;
    height: 360px;
    
}
#about .column-right{
    width: 100%;
}
#about .column-right h2{
    font-size: 1.8rem;
    font-weight: 500;
    letter-spacing: .2rem;
    margin-bottom: 10px;
}
#about .column-right p{
    margin-bottom: 20px;
    color: rgb(39, 35, 35);
}
#about .column-right .cta{
    color: rgb(63, 41, 41);
    margin-bottom: 30px;
    font-weight: 500;
    font-size: 1.5rem;
    padding: 10px 20px;
}

/*contact*/
#contact .contact{
    flex-direction: column;
    max-width: 100%;
    margin: 0 auto;

}
#contact .contact-items{
    
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 80%;
    margin: 0 auto;
    align-items: center;
    
}
#contact .contact-item{
    width: 70%;
    padding: 20px;
    text-align: center;
    border-radius: 10px;
    padding: 30px;
    margin: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    box-shadow: 0px 0px 18px 0 #0000002c;
    transition: .3s ease box-shadow;
}
#contact .contact-item:hover{
    box-shadow: 0px 0px 5px 0 #0000002c ;
}
#contact .icon{
    width: 70px;
    margin: 0 auto;
    margin-bottom: 10px;

}
#contact .contact-info h1{
    font-size: 2.5rem;
    font-weight: 500;
    margin-bottom: 5px;

}
#contact .contact-info h2{
    font-size: 1.3rem;
    font-weight: 500;
    line-height: 2rem;
}
/*footer*/
#footer{
    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%) ;
}
#footer .footer{
    min-height: 200px;
    flex-direction: column;
    padding-top: 50px;
    padding-bottom: 10px;

}
#footer h2{
    color: white;
    font-weight: 500;
    font-size: 1.8rem;
    letter-spacing: .1rem;
    margin-top: 10px;
    margin-bottom: 10px;
}
#footer .social-icon{
    display: flex; 
    margin-bottom: 30px;
    
}
#footer .social-item{
    height: 50px;
    width: 50px;
    margin-bottom: 0 5px;
}
#footer .social-item img{
    filter: grayscale(1);
    transition: .3s ease filter;
}
#footer .social-item:hover img{
    filter: grayscale(0);
}
#footer p{
    color: white;
    font-size: 1.3rem;
}
/*query for tablet*/
@media only screen and (min-width:768px){
    .cta{
        font-size: 2.5rem;
        padding: 20px 60px;
    }
    .brand h1{
        font-size: 3rem;
        text-transform: uppercase;
        color: white;
    }
    .brand h1 span{
        color: crimson;
    }
    
    h1.section-title{
        font-size: 6rem;
    }
    #home h1{
        font-size: 7rem;
    }
    #interests .service-bottom .service-item{
        flex-basis: 45%;
        margin: 2.5%;
    }
    #projects .project-item{
        flex-direction: row;
    }
    #projects .project-item:nth-child(even){
        flex-direction: row-reverse;
    }
    #projects .project-item{
        
        height: 300px;
        margin: 0;
        width: 100%;
        border-radius: 0;
    }
    #projects .all-project .project-info{
        height: 100%;
    }
    #projects .all-project .project-image{
        height: 100%;
    }
    #about .about{
        flex-direction: row;
    }
    #about .column-left{
        width: 600px;
        height: 400px;
        padding-left: 60px;
    }
    #about .column-right{
        text-align: left;
        padding: 30px;
    }
    #about .column-right h1{
        text-align: left;
    }
    #contact .contact{
        flex-direction: column;
        padding: 60px 0;
        align-items: center;
        justify-content: center;
        min-width: 2vh;
        padding-bottom: 150px;
    }
    #contact .contact-items{
        width: 100%;
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
        margin: 0;
        padding: 30px;
    }
    #contact .contact-item{
        /* margin: 10px; */
        flex-direction: row;
        width: 30%;
        
    }
    #contact .contact-item .icon{
        height: 100px;
        width: 100px;
    }
    #contact .contact-item .icon img{
        object-fit: contain;
    }
    #contact .contact-item .contact-info{
        width: 100%;
        text-align: left;
        padding-left: 20px;
    }
}


@media only screen and (min-width:1200px){
    #interests .service-bottom .service-item{
        flex-basis: 22%;
        margin: 0.5%;
    }

    #header .hamburger{
        display: none;
    }
    #header .nav-list ul{
        position: initial;
        display: block;
        height: auto;
        width: fit-content;
        background-color: transparent;
    }
    #header .nav-list ul a:after{
        display: none;
    }
    #header .nav-list ul li{
        display: inline-block;
        
    }
    #header .nav-list ul li a{
        font-size: 1.8rem;
    }
    #header .new-list ul a:after{
        display: none;
    }
}
/* ... */

